# solixdb-indexer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clickhouse-users.xml  config.toml.example  docker-compose.clickhouse.yml  docker-compose.parallel.yml  docker-compose.test.yml  docker-compose.yml  generate_collectors.sh  generate_parallel_indexers.sh  index_large_range.sh  run_parallel_indexers.sh  validate_usecases.sql
crates/core/: Cargo.toml
crates/jupiter-swap-parser/: Cargo.toml
crates/meteora-amm-parser/: Cargo.toml
crates/moonshot-parser/: Cargo.toml
crates/orca-whirlpool-parser/: Cargo.toml
crates/proc-macro/: Cargo.toml  README.md
crates/proc-macro/src/: lib.rs  parse.rs  render.rs
crates/proto/: Cargo.toml
crates/pump-swaps-parser/: Cargo.toml
crates/pumpfun-parser/: Cargo.toml
crates/raydium-amm-v4-parser/: Cargo.toml
crates/raydium-clmm-parser/: Cargo.toml
crates/raydium-cpmm-parser/: Cargo.toml
crates/raydium-launchpad-parser/: Cargo.toml
crates/raydium-launchpad-parser/src/generated_sdk/types/: platform_config_param.rs  pool_create_event.rs
idls/: jupiter_v4.json  orca_whirlpool.json  pump_fun.json  pumpfun_swaps.json  raydium_amm_v3.json  raydium_cpmm.json
src/: clickhouse.rs  config.rs  helpers.rs  main.rs  multi_parser.rs  parser.rs  storage.rs  types.rs
