[workspace]
members = ["crates/*"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/priyanshpatel18/transaction-parser"

[workspace.dependencies]
# Core Utilities
clap = "4.5"
dashmap = "6.1.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0.64"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

# Async
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "fs", "sync"] }

# Solana v2.x
solana-account-info = "2.2.0"
solana-cpi = "2.2.0"
solana-decode-error = "2.2.0"
solana-instruction = "2.2.0"
solana-msg = "2.2.0"
solana-program-entrypoint = "2.2.0"
solana-program-error = "2.2.0"
solana-pubkey = "2.2.0"
solana-sdk = "2.2.0"
solana-transaction-status = "2.2.0"

# Solana v3.x
solana-hash = { version = "3.0.0", features = ["serde"] }
solana-message = "3.0.1"
solana-sysvar = { version = "3.0.0", features = ["serde"] }

# Solana Misc
solana-address = "2.0.0"

# Jetstream
jetstreamer-firehose = "0.2.0"
jetstreamer-plugin = "0.2.0"
jetstreamer-utils = "0.2.0"

# Serialization / Proto
borsh = "1.5.5"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protobuf-src = "1.1"
tonic = "0.12.1"
tonic-build = "0.12"
tonic-reflection = "0.12"

# Numeric / Enums
num-derive = "0.4.0"
num-traits = "0.2.0"
strum = "0.27"
strum_macros = "0.27"

# Internal
yellowstone-vixen-core = { path = "crates/core", version = "0.6.0" }
yellowstone-vixen-proto = { path = "crates/proto", version = "0.6.0" }
yellowstone-vixen-raydium-amm-v4-parser = { path = "crates/raydium-amm-v4-parser", version = "0.6.0" }

# External
bs58 = "0.5.1"
yellowstone-grpc-proto = { version = "9", default-features = false }


[package]
name = "transaction-parser"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
bs58.workspace = true
borsh.workspace = true
clap.workspace = true
dashmap.workspace = true

futures-util.workspace = true

jetstreamer-firehose.workspace = true
jetstreamer-plugin.workspace = true
jetstreamer-utils.workspace = true

num-derive.workspace = true
num-traits.workspace = true

once_cell.workspace = true

prost.workspace = true
prost-build.workspace = true
prost-types.workspace = true
protobuf-src.workspace = true

serde.workspace = true

solana-account-info.workspace = true
solana-address.workspace = true
solana-cpi.workspace = true
solana-decode-error.workspace = true
solana-hash.workspace = true
solana-instruction.workspace = true
solana-message.workspace = true
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error.workspace = true
solana-pubkey.workspace = true
solana-sdk.workspace = true
solana-sysvar.workspace = true
solana-transaction-status.workspace = true

strum.workspace = true
strum_macros.workspace = true

thiserror.workspace = true

tokio.workspace = true
tonic.workspace = true
tonic-build.workspace = true
tonic-reflection.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

yellowstone-grpc-proto.workspace = true
yellowstone-vixen-core.workspace = true
yellowstone-vixen-proto.workspace = true
yellowstone-vixen-raydium-amm-v4-parser.workspace = true
