
[workspace]
members = ["crates/*"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.6.0"
repository = "https://github.com/SolixDB/solixdb-indexer"
publish = false

[workspace.dependencies]
# Core Utilities
clap = "4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0" 
thiserror = "1.0.64"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
base64 = "0.22"

# Proc Macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
codama-nodes = "^0.6"
prettyplease = "0.2"

# Async
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "sync"] }

# Solana
solana-address = "2.0.0"
solana-message = "3.0.1"

# Jetstream
jetstreamer-firehose = "0.2.0"

# Serialization
borsh = "1.5.5"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protobuf-src = "1.1"
tonic = "0.12.1"
tonic-build = "0.12"
tonic-reflection = "0.12"

# Internal
yellowstone-vixen-core = { path = "crates/core", version = "0.6.0" }
yellowstone-vixen-proto = { path = "crates/proto", version = "0.6.0" }
yellowstone-vixen-proc-macro = { path = "crates/proc-macro", version = "0.6.0" }

# External
clickhouse = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
bs58 = "0.5.1"
yellowstone-grpc-proto = { version = "9", default-features = false }


[package]
name = "solixdb-indexer"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
bs58.workspace = true
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true

# Async
futures-util.workspace = true
tokio = { workspace = true, features = ["signal"] }

# Jetstream
jetstreamer-firehose.workspace = true

# Solana
solana-address.workspace = true
solana-message.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Internal crates
yellowstone-vixen-core.workspace = true
yellowstone-vixen-proc-macro.workspace = true
yellowstone-grpc-proto.workspace = true

# ClickHouse
clickhouse.workspace = true
chrono.workspace = true
hex.workspace = true

# Config
toml = "0.8"
