[package]
name = "yellowstone-vixen-core"
description = "Core types for Vixen"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bs58.workspace = true
thiserror.workspace = true
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-proto = { workspace = true, optional = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }

[features]
proto = ["dep:yellowstone-vixen-proto"]
